# sync_prim

./: CMakeLists.txt  DESIGN.md  LICENSE.txt  Makefile  README.md  REQUIREMENTS.md
include/sync_prim/: upgrade_mutex.hpp
src/: bank_account_example.cpp  benchmark_upgrade_mutex.cpp
tests/: test_upgrade_mutex.cpp
